fix: icon alignment

--- a/src/styles/components/typography/list.pcss
+++ b/src/styles/components/typography/list.pcss
@@ -1,22 +1,21 @@
 .list {
-  align-items: start;
   display: flex;
   flex-direction: column;
   gap: var(--spacing-em-sm);
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   padding: 0;
 
   &.direction-horizontal {
-    flex-direction: row;
-    gap: var(--spacing-em-md);
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+    gap: var(--spacing-em-sm);
   }
 
   &.alignment-end {
-    align-items: end;
-    justify-content: end;
+    align-items: flex-end;
+    justify-content: flex-end;
   }
+
   &.alignment-center {
     align-items: center;
     justify-content: center;
@@ -25,30 +24,43 @@
   &.size-xs {
     font-size: var(--font-size-xs);
   }
+
   &.size-sm {
     font-size: var(--font-size-sm);
   }
+
   &.size-md {
     font-size: var(--font-size-md);
   }
+
   &.size-lg {
     font-size: var(--font-size-lg);
   }
+
   &.size-xl {
     font-size: var(--font-size-xl);
   }
+
   &.size-2xl {
     font-size: var(--font-size-2xl);
   }
 
   > .item {
-    gap: var(--spacing-em-xs);
-    display: inline-flex;
-    align-items: flex-start;
+    display: block;
+  }
 
-    > .list-icon {
-      flex-shrink: 0;
-      margin-top: 0.3em;
+  > .item > .list-icon {
+    display: inline-block;
+    flex-shrink: 0;
+    height: 1em;
+    margin-right: var(--spacing-em-xs);
+    vertical-align: -0.15em;
+    width: 1em;
+
+    svg {
+      display: block;
+      height: 100%;
+      width: 100%;
     }
   }
 }
